# citrea

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  COPYING  Cargo.toml  Dockerfile  Makefile  README.md  all  all-no-default-normal  builder-dockerfile  citrea-evm-depth-tree  deny.toml  dep_tree_citrea_evm  dep_tree_citrea_stf  docker-compose.postgres.yml  docker-compose.regtest.yml  docker-compose.yml  dprint.json  evm-all  evm-no-default-normal-reverse  evm-normal  l1_fee_overhead.md  risc0-reverse-workspace  rust-toolchain.toml  rustfmt.toml  sma-no-default-normal  stf-normal  stf-normal-native
citrea/ethereum-rpc/: Cargo.toml  README.md
citrea/ethereum-rpc/src/: lib.rs
citrea/rollup/: Cargo.toml  README.md  celestia_rollup_config.toml
citrea/rollup/citrea-stf/: Cargo.toml  README.md
citrea/rollup/configs/bitcoin-regtest/: sequencer_rollup_config.toml
citrea/rollup/src/: celestia_rollup.rs  eth.rs  lib.rs  main.rs
citrea/rollup/src/sov-cli/: main.rs
citrea/rollup/stf/: Cargo.toml
citrea/rollup/stf/src/: runtime.rs
citrea/rollup/tests/: test_helpers.rs
citrea/rollup/tests/e2e/: mod.rs
citrea/rollup/tests/evm/: archival_state.rs  gas_price.rs  mod.rs  tracing.rs
citrea/rollup/tests/mempool/: mod.rs
citrea/rollup/tests/test_client/: mod.rs
citrea/sequencer/: Cargo.toml  README.md
citrea/sequencer/src/: commitment_controller.rs  rpc.rs  sequencer.rs
citrea/sequencer/src/db_provider/: mod.rs
crates/bitcoin-da/: Cargo.toml  LICENSE  README.md
crates/bitcoin-da/src/: lib.rs  rpc.rs  service.rs  verifier.rs
crates/bitcoin-da/src/helpers/: builders.rs  compression.rs  merkle_tree.rs  mod.rs  parsers.rs  test_utils.rs
crates/bitcoin-da/src/spec/: blob.rs  block.rs  block_hash.rs  header.rs  header_stream.rs  mod.rs  proof.rs  transaction.rs  utxo.rs
crates/bitcoin-da/test_data/: false_signature_txs.txt  mock_txs.txt
crates/citrea-stf/: Cargo.toml  README.md
crates/citrea-stf/src/: genesis_config.rs  hooks_impl.rs  lib.rs  runtime.rs  verifier.rs
crates/common/: Cargo.toml
crates/common/src/: cache.rs  config.rs  da.rs  error.rs  lib.rs  utils.rs
crates/common/src/rpc/: mod.rs
crates/common/src/tasks/: manager.rs
crates/ef-tests/: Cargo.toml
crates/ef-tests/src/: assert.rs  case.rs  models.rs  result.rs  suite.rs
crates/ef-tests/src/cases/: blockchain_test.rs
crates/ef-tests/tests/: tests.rs
crates/ethereum-rpc/: Cargo.toml  README.md
crates/ethereum-rpc/src/: eth_subscription.rs  ethereum.rs  lib.rs  subscription.rs  trace.rs
crates/ethereum-rpc/src/gas_price/: cache.rs  fee_history.rs  gas_oracle.rs  mod.rs
crates/evm/: .gitignore  Cargo.toml
crates/evm/src/: call.rs  genesis.rs  hooks.rs  lib.rs  provider_functions.rs  query.rs  test_utils.rs  types.rs
crates/evm/src/ef_tests/: assert.rs  mod.rs  models.rs  result.rs
crates/evm/src/evm/: call.rs  conversions.rs  db.rs  db_commit.rs  db_init.rs  executor.rs  factory.rs  handler.rs  mod.rs  primitive_types.rs  system_events.rs  tests.rs
crates/evm/src/rpc_helpers/: filter.rs  mod.rs  responses.rs  tracing_utils.rs
crates/evm/src/signer/: mod.rs
crates/evm/src/smart_contracts/: blockhash_contract.rs  caller_contract.rs  coinbase_contract.rs  hive_contract.rs  infinite_loop_contract.rs  logs_contract.rs  mod.rs  payable_contract.rs  self_destructor_contract.rs  simple_storage_contract.rs
crates/evm/src/tests/: call_tests.rs  cfg_tests.rs  genesis_tests.rs  hooks_tests.rs  mod.rs  sys_tx_tests.rs  test_signer.rs  tx_tests.rs  utils.rs
crates/evm/tests/: tests.rs
crates/fullnode/: Cargo.toml
crates/fullnode/src/: da_block_handler.rs  error.rs  lib.rs  runner.rs
crates/fullnode/src/db_migrations/: mod.rs
crates/fullnode/tests/: hash_stf.rs  runner_initialization_tests.rs  runner_reorg_tests.rs
crates/light-client-prover/: Cargo.toml
crates/light-client-prover/src/: circuit.rs  da_block_handler.rs  input.rs  lib.rs  output.rs  runner.rs
crates/node-configs/: Cargo.toml
crates/node-configs/src/: config.rs  lib.rs
crates/offchain-db/: Cargo.toml  README.md
crates/offchain-db/src/: config.rs  lib.rs  postgres_connector.rs  tables.rs  utils.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: basefee.rs  cache.rs  compression.rs  constants.rs  da.rs  error.rs  forks.rs  lib.rs  types.rs  utils.rs
crates/prover/: Cargo.toml
crates/prover/src/: da_block_handler.rs  lib.rs  proving.rs  rpc.rs  runner.rs  utils.rs
crates/prover/src/rpc/: mod.rs  (+1 more)
crates/prover/tests/: prover_tests.rs  runner_initialization_tests.rs  runner_reorg_tests.rs
crates/pruning/: Cargo.toml
crates/pruning/src/: criteria.rs  lib.rs  tests.rs
crates/risc0-bonsai/: Cargo.toml  README.md
crates/risc0-bonsai/src/: host.rs  lib.rs
crates/risc0-bonsai/tests/: native.rs
crates/risc0-boundless/: Cargo.toml
crates/risc0-boundless/src/: host.rs  lib.rs
crates/sequencer/: Cargo.toml  README.md
crates/sequencer-client/: Cargo.toml  README.md
crates/sequencer-client/src/: lib.rs
crates/sequencer/src/: commitment_controller.rs  config.rs  debug.rs  deposit_data_mempool.rs  lib.rs  mempool.rs  rpc.rs  runner.rs  sequencer.rs  utils.rs
crates/shared-backup-db/: Cargo.toml  README.md
crates/shared-backup-db/src/: config.rs  lib.rs  postgres_connector.rs  tables.rs  utils.rs
crates/soft-confirmation-rule-enforcer/: Cargo.toml  README.md
crates/soft-confirmation-rule-enforcer/src/: call.rs  genesis.rs  hooks.rs  lib.rs  query.rs
crates/sovereign-sdk/fuzz/: Cargo.toml
crates/sovereign-sdk/rollup-interface/: Cargo.toml  Makefile
crates/sp1/: Cargo.toml
crates/sp1/src/: guest.rs  host.rs  lib.rs
crates/utility-server/: Cargo.toml
crates/utility-server/src/: config.rs  lib.rs
full-node/chainway-sequencer/: Cargo.toml
full-node/chainway-sequencer/src/: commitment_controller.rs  config.rs  lib.rs  mempool.rs  rpc.rs  sequencer.rs  utils.rs
full-node/sequencer-client/: Cargo.toml
full-node/sequencer-client/src/: lib.rs
full-node/sov-ethereum/: Cargo.toml
full-node/sov-ethereum/src/: batch_builder.rs  lib.rs
(+784 files in other folders)
