[workspace]
resolver = "2"
members = [
    # Citrea
    "citrea/bitcoin-da",
    "citrea/evm",
    "citrea/rollup",
    "citrea/sequencer",
    "citrea/sequencer-client",
    "citrea/soft-confirmation-rule-enforcer",
    "citrea/ethereum-rpc",


    # Sovereign sdk
    "sovereign-sdk/rollup-interface",
    "sovereign-sdk/adapters/avail",
    "sovereign-sdk/adapters/risc0",
    "sovereign-sdk/adapters/celestia",
    "sovereign-sdk/adapters/mock-da",
    "sovereign-sdk/adapters/mock-zkvm",
    # Examples
    "sovereign-sdk/examples/const-rollup-config",
    "sovereign-sdk/examples/demo-simple-stf",
    "sovereign-sdk/examples/simple-nft-module",
    "sovereign-sdk/examples/demo-stf",
    # Full Node
    "sovereign-sdk/full-node/db/sov-db",
    "sovereign-sdk/full-node/sov-sequencer",
    "sovereign-sdk/full-node/sov-ledger-rpc",
    "sovereign-sdk/full-node/sov-stf-runner",
    "sovereign-sdk/full-node/sov-prover-storage-manager",
    # Utils
    "sovereign-sdk/utils/zk-cycle-macros",
    "sovereign-sdk/utils/zk-cycle-utils",
    "sovereign-sdk/utils/bashtestmd",
    "sovereign-sdk/utils/rng-da-service",
    # Module System
    "sovereign-sdk/module-system/sov-cli",
    "sovereign-sdk/module-system/sov-modules-stf-blueprint",
    "sovereign-sdk/module-system/sov-modules-rollup-blueprint",
    "sovereign-sdk/module-system/sov-modules-macros",
    "sovereign-sdk/module-system/sov-modules-core",
    "sovereign-sdk/module-system/sov-soft-confirmations-kernel",
    "sovereign-sdk/module-system/sov-state",
    "sovereign-sdk/module-system/sov-modules-api",
    "sovereign-sdk/module-system/module-schemas",
    "sovereign-sdk/module-system/utils/sov-data-generators",
    "sovereign-sdk/module-system/module-implementations/sov-accounts",
    "sovereign-sdk/module-system/module-implementations/sov-bank",
    "sovereign-sdk/module-system/module-implementations/sov-nft-module",
    "sovereign-sdk/module-system/module-implementations/sov-chain-state",
    "sovereign-sdk/module-system/module-implementations/sov-blob-storage",
    "sovereign-sdk/module-system/module-implementations/sov-prover-incentives",
    "sovereign-sdk/module-system/module-implementations/sov-attester-incentives",
    "sovereign-sdk/module-system/module-implementations/sov-sequencer-registry",
    "sovereign-sdk/module-system/module-implementations/module-template",
    "sovereign-sdk/module-system/module-implementations/examples/sov-value-setter",
    "sovereign-sdk/module-system/module-implementations/examples/sov-vec-setter",
    "sovereign-sdk/module-system/module-implementations/examples/sov-accessory-state",
    "sovereign-sdk/module-system/module-implementations/integration-tests",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
homepage = "https://www.sovereign.xyz"
publish = false
repository = "https://github.com/sovereign-labs/sovereign-sdk"

[workspace.dependencies]
# Dependencies maintained by Sovereign
jmt = { git = "https://github.com/penumbra-zone/jmt.git", rev = "1d007e11cb68aa5ca13e9a5af4a12e6439d5f7b6" }


# External dependencies
async-trait = "0.1.71"
anyhow = { version = "1.0.68", default-features = false }
arbitrary = { version = "1.3.1", features = ["derive"] }
alloy-rlp = "0.3"
borsh = { version = "0.10.3", default-features = false }
# TODO: Consider replacing this serialization format
#     https://github.com/Sovereign-Labs/sovereign-sdk/issues/283
bincode = "1.3.3"
bcs = "0.1.6"
byteorder = { version = "1.5.0", default-features = false }
bytes = { version = "1.2.1", default-features = false }
digest = { version = "0.10.6", default-features = false, features = ["alloc"] }
rs_merkle = "1.4.2"
futures = "0.3"
pin-project = { version = "1.1.3" }
hex = { version = "0.4.3", default-features = false, features = [
    "alloc",
    "serde",
] }
once_cell = { version = "1.19.0", default-features = false, features = [
    "alloc",
] }
prometheus = { version = "0.13.3", default-features = false }
proptest = { version = "1.3.1", default-features = false, features = ["alloc"] }
proptest-derive = "0.3.0"
rand = "0.8"
rayon = "1.8.0"
rocksdb = { version = "0.21.0", features = ["lz4"] }
serde = { version = "1.0.192", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.6", default-features = false }
thiserror = "1.0.50"
tracing = { version = "0.1.40", default-features = false }
bech32 = { version = "0.9.1", default-features = false }
derive_more = { version = "0.99.11", default-features = false }
clap = { version = "4.4.10", features = ["derive"] }
toml = "0.8.0"
jsonrpsee = { version = "0.20.1", features = ["jsonrpsee-types"] }
schemars = { version = "0.8.16", features = ["derive"] }
tempfile = "3.8"
tokio = { version = "1", features = ["full"] }
num_cpus = "1.0"
risc0-zkvm = { version = "0.20", default-features = false }
risc0-zkvm-platform = { version = "0.20" }
risc0-zkp = "0.20"
risc0-circuit-rv32im = "0.20"
risc0-build = "0.20"

# EVM dependencies
ethereum-types = "0.14.1"
ethers = "2.0"
ethers-core = { version = "2.0", default-features = false }
ethers-contract = "2.0"
ethers-providers = { version = "2.0", default-features = false }
ethers-signers = { version = "2.0", default-features = false }
ethers-middleware = { version = "2.0", default-features = false }

reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.2" }
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.2" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.2" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.2" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.2" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.2" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.2" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.2" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.2" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.2" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.2" }
revm-inspectors = { git = "https://github.com/paradigmxyz/evm-inspectors", rev = "d7317c7" }

revm = { version = "7.1.0", features = [
    "std",
    "secp256k1",
], default-features = false }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "9ac2c90", features = [
    "jsonrpsee-types",
] }
alloy-primitives = "0.6"
alloy-sol-types = "0.6"
secp256k1 = { version = "0.27.0", default-features = false, features = [
    "global-context",
    "rand-std",
    "recovery",
] }

[patch.'https://github.com/eigerco/celestia-node-rs.git']
# Uncomment to apply local changes
# celestia-proto = { path = "../celestia-node-rs/proto" }
# celestia-rpc = { path = "../celestia-node-rs/rpc" }
# celestia-types = { path = "../celestia-node-rs/types" }

[patch.'https://github.com/eigerco/celestia-tendermint-rs.git']
# Uncomment to apply local changes
# tendermint = { path = "../celestia-tendermint-rs/tendermint" }
# tendermint-proto = { path = "../celestia-tendermint-rs/proto" }
