[workspace]
resolver = "2"
members = [
    # Citrea
    "bin/citrea",
    "bin/rollup-constants",
    "crates/bitcoin-da",
    "crates/evm",
    "crates/sequencer",
    "crates/sequencer-client",
    "crates/soft-confirmation-rule-enforcer",
    "crates/ethereum-rpc",
    # Sovereign sdk
    "crates/sovereign-sdk/rollup-interface",
    "crates/sovereign-sdk/adapters/risc0",
    "crates/sovereign-sdk/adapters/risc0-bonsai",
    "crates/sovereign-sdk/adapters/mock-da",
    "crates/sovereign-sdk/adapters/mock-zkvm",
    # Examples
    "crates/sovereign-sdk/examples/const-rollup-config",
    "crates/sovereign-sdk/examples/demo-simple-stf",
    "crates/sovereign-sdk/examples/simple-nft-module",
    "crates/sovereign-sdk/examples/demo-stf",
    # Full Node
    "crates/sovereign-sdk/full-node/db/sov-db",
    "crates/sovereign-sdk/full-node/sov-sequencer",
    "crates/sovereign-sdk/full-node/sov-ledger-rpc",
    "crates/sovereign-sdk/full-node/sov-stf-runner",
    "crates/sovereign-sdk/full-node/sov-prover-storage-manager",
    # Utils
    "crates/sovereign-sdk/utils/zk-cycle-macros",
    "crates/sovereign-sdk/utils/zk-cycle-utils",
    "crates/sovereign-sdk/utils/bashtestmd",
    "crates/sovereign-sdk/utils/rng-da-service",
    # Module System
    "crates/sovereign-sdk/module-system/sov-cli",
    "crates/sovereign-sdk/module-system/sov-modules-stf-blueprint",
    "crates/sovereign-sdk/module-system/sov-modules-rollup-blueprint",
    "crates/sovereign-sdk/module-system/sov-modules-macros",
    "crates/sovereign-sdk/module-system/sov-modules-core",
    "crates/sovereign-sdk/module-system/sov-state",
    "crates/sovereign-sdk/module-system/sov-modules-api",
    "crates/sovereign-sdk/module-system/module-schemas",
    "crates/sovereign-sdk/module-system/utils/sov-data-generators",
    "crates/sovereign-sdk/module-system/module-implementations/sov-accounts",
    "crates/sovereign-sdk/module-system/module-implementations/sov-bank",
    "crates/sovereign-sdk/module-system/module-implementations/sov-nft-module",
    "crates/sovereign-sdk/module-system/module-implementations/sov-prover-incentives",
    "crates/sovereign-sdk/module-system/module-implementations/sov-sequencer-registry",
    "crates/sovereign-sdk/module-system/module-implementations/module-template",
    "crates/sovereign-sdk/module-system/module-implementations/examples/sov-value-setter",
    "crates/sovereign-sdk/module-system/module-implementations/examples/sov-vec-setter",
    "crates/sovereign-sdk/module-system/module-implementations/examples/sov-accessory-state",
    "crates/sovereign-sdk/module-system/module-implementations/integration-tests",
    # Offchain
    "crates/shared-backup-db",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Chainway Labs <info@chainway.xyz>"]
homepage = "https://chainway.xyz"
publish = false
repository = "https://github.com/chainwayxyz/citrea"

[workspace.dependencies]
# Dependencies maintained by Sovereign
jmt = { git = "https://github.com/penumbra-zone/jmt.git", rev = "1d007e11cb68aa5ca13e9a5af4a12e6439d5f7b6" }

# External dependencies
async-trait = "0.1.71"
anyhow = { version = "1.0.68", default-features = false }
arbitrary = { version = "1.3.1", features = ["derive"] }
alloy-rlp = "0.3"
borsh = { version = "0.10.3", default-features = false }
# TODO: Consider replacing this serialization format
#     https://github.com/Sovereign-Labs/sovereign-sdk/issues/283
bincode = "1.3.3"
bcs = "0.1.6"
byteorder = { version = "1.5.0", default-features = false }
bytes = { version = "1.2.1", default-features = false }
chrono = { version = "0.4.37", default-features = false }
digest = { version = "0.10.6", default-features = false, features = ["alloc"] }
deadpool-postgres = "0.13.1"
rs_merkle = "1.4.2"
futures = "0.3"
pin-project = { version = "1.1.3" }
hex = { version = "0.4.3", default-features = false, features = [
    "alloc",
    "serde",
] }
once_cell = { version = "1.19.0", default-features = false, features = [
    "alloc",
] }
prometheus = { version = "0.13.3", default-features = false }
proptest = { version = "1.3.1", default-features = false, features = ["alloc"] }
proptest-derive = "0.3.0"
rand = "0.8"
rayon = "1.8.0"
rustc_version_runtime = { version = "0.3.0", default-features = false }
reqwest = { version = "0.12", features = [
    "rustls-tls",
    "json",
    "http2",
], default-features = false }
rocksdb = { version = "0.21.0", features = ["lz4"] }
serde = { version = "1.0.192", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.6", default-features = false }
thiserror = "1.0.50"
tracing = { version = "0.1.40", default-features = false }
bech32 = { version = "0.9.1", default-features = false }
derive_more = { version = "0.99.11", default-features = false }
clap = { version = "4.4.10", features = ["derive"] }
toml = "0.8.0"
jsonrpsee = { version = "0.20.1", features = ["jsonrpsee-types"] }
schemars = { version = "0.8.16", features = ["derive"] }
tempfile = "3.8"
tokio = { version = "1", features = ["full"] }
num_cpus = "1.0"
risc0-zkvm = { version = "0.21", default-features = false }
risc0-zkvm-platform = { version = "0.21" }
risc0-zkp = "0.21"
risc0-circuit-rv32im = "0.21"
risc0-build = "0.21"

# EVM dependencies
ethereum-types = "0.14.1"
ethers = "2.0"
ethers-core = { version = "2.0", default-features = false }
ethers-contract = "2.0"
ethers-providers = { version = "2.0", default-features = false }
ethers-signers = { version = "2.0", default-features = false }
ethers-middleware = { version = "2.0", default-features = false }

revm-inspectors = { git = "https://github.com/paradigmxyz/evm-inspectors", rev = "0ad0338" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.5", default-features = false }
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.5" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.5" }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.5" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.5" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.5" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.5" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.5" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.5" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.5" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.5" }
reth-stages = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.5" }

revm = { version = "7.2.0", features = ["serde"], default-features = false }
# forcing cargo for this version or else chooses 3.1.1 and there is some dependency conflicts
revm-primitives = { version = "=3.1.0", default-features = false }
# forcing cargo for this version or else chooses 0.3.1 and there is some dependency conflicts
alloy-trie = { version = "=0.3.0", default-features = false }
alloy-primitives = "0.6.4"
alloy-sol-types = "0.6.4"

secp256k1 = { version = "0.27.0", default-features = false, features = [
    "global-context",
    "recovery",
] }

[patch.'https://github.com/eigerco/celestia-node-rs.git']
# Uncomment to apply local changes
# celestia-proto = { path = "../celestia-node-rs/proto" }
# celestia-rpc = { path = "../celestia-node-rs/rpc" }
# celestia-types = { path = "../celestia-node-rs/types" }

[patch.'https://github.com/eigerco/celestia-tendermint-rs.git']
# Uncomment to apply local changes
# tendermint = { path = "../celestia-tendermint-rs/tendermint" }
# tendermint-proto = { path = "../celestia-tendermint-rs/proto" }
