[workspace]
resolver = "2"
members = [
  # Citrea
  "bin/citrea",
  "crates/batch-prover",
  "crates/bitcoin-da",
  "crates/citrea-stf",
  "crates/common",
  "crates/ethereum-rpc",
  "crates/evm",
  "crates/fullnode",
  "crates/light-client-prover",
  "crates/primitives",
  "crates/prover-services",
  "crates/pruning",
  "crates/risc0-bonsai",
  "crates/sequencer",
  "crates/sequencer-client",
  "crates/soft-confirmation-rule-enforcer",
  # Sovereign sdk
  "crates/sovereign-sdk/rollup-interface",
  "crates/sovereign-sdk/adapters/risc0",
  "crates/sovereign-sdk/adapters/mock-da",
  "crates/sovereign-sdk/adapters/mock-zkvm",
  # Examples
  "crates/sovereign-sdk/examples/const-rollup-config",
  "crates/sovereign-sdk/examples/demo-simple-stf",
  "crates/sovereign-sdk/examples/demo-stf",
  # Full Node
  "crates/sovereign-sdk/full-node/db/sov-db",
  "crates/sovereign-sdk/full-node/sov-ledger-rpc",
  "crates/sovereign-sdk/full-node/sov-stf-runner",
  "crates/sovereign-sdk/full-node/sov-prover-storage-manager",
  # Utils
  "crates/sovereign-sdk/utils/zk-cycle-macros",
  "crates/sovereign-sdk/utils/zk-cycle-utils",
  "crates/sovereign-sdk/utils/bashtestmd",
  "crates/sovereign-sdk/utils/rng-da-service",
  # Module System
  "crates/sovereign-sdk/module-system/sov-cli",
  "crates/sovereign-sdk/module-system/sov-modules-stf-blueprint",
  "crates/sovereign-sdk/module-system/sov-modules-rollup-blueprint",
  "crates/sovereign-sdk/module-system/sov-modules-macros",
  "crates/sovereign-sdk/module-system/sov-modules-core",
  "crates/sovereign-sdk/module-system/sov-state",
  "crates/sovereign-sdk/module-system/sov-modules-api",
  "crates/sovereign-sdk/module-system/module-schemas",
  "crates/sovereign-sdk/module-system/utils/sov-data-generators",
  "crates/sovereign-sdk/module-system/module-implementations/sov-accounts",
  "crates/sovereign-sdk/module-system/module-implementations/sov-bank",
  "crates/sovereign-sdk/module-system/module-implementations/sov-prover-incentives",
  "crates/sovereign-sdk/module-system/module-implementations/sov-sequencer-registry",
  "crates/sovereign-sdk/module-system/module-implementations/module-template",
  "crates/sovereign-sdk/module-system/module-implementations/examples/sov-value-setter",
  "crates/sovereign-sdk/module-system/module-implementations/examples/sov-vec-setter",
  "crates/sovereign-sdk/module-system/module-implementations/examples/sov-accessory-state",
  "crates/sovereign-sdk/module-system/module-implementations/integration-tests",
]

[workspace.package]
version = "0.5.0-rc.1"
edition = "2021"
license = "GPL-3.0"
authors = ["Chainway Labs <info@chainway.xyz>"]
homepage = "https://citrea.xyz"
publish = false
repository = "https://github.com/chainwayxyz/citrea"

[workspace.dependencies]
# Dependencies maintained by Sovereign
jmt = { git = "https://github.com/penumbra-zone/jmt.git", rev = "fd1c8ef" }

# External dependencies
async-trait = "0.1.71"
anyhow = { version = "1.0.68", default-features = false }
arbitrary = { version = "1.3.1", features = ["derive"] }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
borsh = { version = "1.5", default-features = false, features = ["derive"] }
# TODO: Consider replacing this serialization format
#     https://github.com/Sovereign-Labs/sovereign-sdk/issues/283
bincode = "1.3.3"
bitcoin = { version = "0.32.2", features = ["serde", "rand"] }
bitcoincore-rpc = { version = "0.18.0" }
bcs = "0.1.6"
brotli = "6"
byteorder = { version = "1.5.0", default-features = false }
bytes = { version = "1.2.1", default-features = false }
chrono = { version = "0.4.37", default-features = false }
digest = { version = "0.10.6", default-features = false, features = ["alloc"] }
itertools = { version = "0.13.0", default-features = false }
lru = "0.12.3"
rs_merkle = "1.4.2"
futures = "0.3"
pin-project = { version = "1.1.3" }
hex = { version = "0.4.3", default-features = false, features = ["alloc", "serde"] }
lazy_static = { version = "1.5.0" }
log-panics = { version = "2", features = ["with-backtrace"] }
once_cell = { version = "1.19.0", default-features = false, features = ["alloc"] }
parking_lot = { version = "0.12.3" }
prometheus = { version = "0.13.3", default-features = false }
proptest = { version = "1.3.1", default-features = false, features = ["alloc"] }
proptest-derive = "0.4.0"
rand = "0.8"
rayon = "1.8.0"
rlimit = "0.10.2"
rustc_version_runtime = { version = "0.3.0", default-features = false }
reqwest = { version = "0.12.5", features = ["rustls-tls", "json", "http2"], default-features = false }
rocksdb = { version = "0.22.0", features = ["lz4"] }
serde = { version = "1.0.192", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false }
thiserror = "1.0.50"
tracing = { version = "0.1.40", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json", "fmt"] }
bech32 = { version = "0.9.1", default-features = false }
derive_more = { version = "0.99.11", default-features = false }
clap = { version = "4.4.10", features = ["derive"] }
toml = "0.8.0"
jsonrpsee = { version = "0.24.2", features = ["jsonrpsee-types"] }
schemars = { version = "0.8.16", features = ["derive"] }
tempfile = "3.8"
tokio = { version = "1.39", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
num_cpus = "1.0"

# Risc0 dependencies
risc0-zkvm = { version = "1.0.5", default-features = false }
risc0-zkvm-platform = { version = "1.0.5" }
risc0-zkp = { version = "1.0.5" }
risc0-circuit-rv32im = { version = "1.0.5" }
risc0-build = { version = "1.0.5" }
bonsai-sdk = { version = "0.9.0" }

# EVM dependencies

revm-inspectors = { version = "=0.5.5", default-features = false }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "a206eb3690e5a51d3c797fed2a6ed722e36863eb", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "a206eb3690e5a51d3c797fed2a6ed722e36863eb", default-features = false }
reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "a206eb3690e5a51d3c797fed2a6ed722e36863eb", default-features = false }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", rev = "a206eb3690e5a51d3c797fed2a6ed722e36863eb", default-features = false, features = ["jsonrpsee-types"] }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "a206eb3690e5a51d3c797fed2a6ed722e36863eb", default-features = false }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "a206eb3690e5a51d3c797fed2a6ed722e36863eb", default-features = false }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "a206eb3690e5a51d3c797fed2a6ed722e36863eb", default-features = false }
reth-rpc-types-compat = { git = "https://github.com/paradigmxyz/reth", rev = "a206eb3690e5a51d3c797fed2a6ed722e36863eb", default-features = false }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "a206eb3690e5a51d3c797fed2a6ed722e36863eb", default-features = false }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "a206eb3690e5a51d3c797fed2a6ed722e36863eb", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "a206eb3690e5a51d3c797fed2a6ed722e36863eb", default-features = false }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "a206eb3690e5a51d3c797fed2a6ed722e36863eb", default-features = false }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "a206eb3690e5a51d3c797fed2a6ed722e36863eb", default-features = false }
reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "a206eb3690e5a51d3c797fed2a6ed722e36863eb", default-features = false }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "a206eb3690e5a51d3c797fed2a6ed722e36863eb", default-features = false }
reth-stages = { git = "https://github.com/paradigmxyz/reth", rev = "a206eb3690e5a51d3c797fed2a6ed722e36863eb", default-features = false }

revm = { version = "12.1", features = ["serde"], default-features = false }
# forcing cargo for this version or else chooses 3.1.1 and there is some dependency conflicts
revm-primitives = { version = "8", default-features = false }
alloy-trie = { version = "0.3.8", default-features = false }
alloy-rlp = { version = "0.3.8", default-features = false }
alloy-primitives = { version = "0.7.7", default-features = false }
alloy-sol-types = { version = "0.7.7", default-features = false, features = ["json"] }
alloy = { version = "0.2.1", default-features = false }
alloy-eips = { version = "0.2.1", default-features = false }
alloy-consensus = { version = "0.2.1", default-features = false }

ed25519-dalek = { version = "2", default-features = false, features = ["serde", "fast"] }
secp256k1 = { version = "0.29.0", default-features = false, features = ["global-context", "recovery"] }

tower-http = { version = "0.5.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = { version = "1.4.0" }

bollard = { version = "0.17.1" }

[patch.'https://github.com/eigerco/celestia-node-rs.git']
# Uncomment to apply local changes
# celestia-proto = { path = "../celestia-node-rs/proto" }
# celestia-rpc = { path = "../celestia-node-rs/rpc" }
# celestia-types = { path = "../celestia-node-rs/types" }

[patch.'https://github.com/eigerco/celestia-tendermint-rs.git']
# Uncomment to apply local changes
# tendermint = { path = "../celestia-tendermint-rs/tendermint" }
# tendermint-proto = { path = "../celestia-tendermint-rs/proto" }

# putting risc0 patches here as well
#  surprisignly decreased cycle counts
[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.2-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
secp256k1 = { git = "https://github.com/Sovereign-Labs/rust-secp256k1.git", branch = "risc0-compatible-0-29-0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0" }
bitcoincore-rpc = { version = "0.18.0", git = "https://github.com/chainwayxyz/rust-bitcoincore-rpc.git", rev = "0ae498d" }
