[package]
name = "ethereum-rpc"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
publish = false
resolver = "2"

[dependencies]
citrea-evm = { path = "../evm" }
sov-stf-runner = { path = "../../sovereign-sdk/full-node/sov-stf-runner" }
sequencer-client = { path = "../sequencer-client" }
anyhow = { workspace = true }
tracing = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }

borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

reth-primitives = { workspace = true }
reth-rpc-types = { workspace = true }
reth-rpc-types-compat = { workspace = true }

alloy-rpc-types = { workspace = true }

ethers = { workspace = true }
tokio = { workspace = true }
schnellru = "0.2.1"

sov-rollup-interface = { path = "../../sovereign-sdk/rollup-interface", features = [
    "native",
] }

citrea-stf = { path = "../rollup/citrea-stf", features = ["native"] }
sov-modules-api = { path = "../../sovereign-sdk/module-system/sov-modules-api" }
sov-accounts = { path = "../../sovereign-sdk/module-system/module-implementations/sov-accounts" }
rustc_version_runtime = "0.3.0"

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }


[features]
default = ["local"]
local = []
native = ["citrea-stf/native", "citrea-evm/native"]
