[package]
name = "sov-demo-rollup"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = "sovereign.xyz"
publish = false
resolver = "2"
default-run = "sov-demo-rollup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# non-optional dependencies
sov-celestia-adapter = { path = "../../sovereign-sdk/adapters/celestia", features = [
    "native",
] }
bitcoin-da = { path = "../bitcoin-da", features = ["native"] }
sov-mock-da = { path = "../../sovereign-sdk/adapters/mock-da", features = [
    "native",
] }
const-rollup-config = { path = "../../sovereign-sdk/examples/const-rollup-config" }
sov-stf-runner = { path = "../../sovereign-sdk/full-node/sov-stf-runner", features = [
    "native",
] }
sov-rollup-interface = { path = "../../sovereign-sdk/rollup-interface", features = [
    "native",
] }
sov-prover-storage-manager = { path = "../../sovereign-sdk/full-node/sov-prover-storage-manager" }

sov-modules-rollup-blueprint = { path = "../../sovereign-sdk/module-system/sov-modules-rollup-blueprint" }
sov-modules-stf-blueprint = { path = "../../sovereign-sdk/module-system/sov-modules-stf-blueprint", features = [
    "native",
] }
sov-modules-api = { path = "../../sovereign-sdk/module-system/sov-modules-api", features = [
    "native",
] }
sov-nft-module = { path = "../../sovereign-sdk/module-system/module-implementations/sov-nft-module" }
citrea-stf = { path = "./citrea-stf", features = ["native"] }
sov-ledger-rpc = { path = "../../sovereign-sdk/full-node/sov-ledger-rpc", features = [
    "server",
] }
risc0 = { path = "./provers/risc0" }
borsh = { workspace = true, features = ["bytes"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true, optional = true }
tokio = { workspace = true }
reth-primitives = { workspace = true }
reth-transaction-pool = { workspace = true }
reth-rpc-types = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

sov-evm = { path = "../evm" }
soft-confirmation-rule-enforcer = { path = "../soft-confirmation-rule-enforcer" }
sov-db = { path = "../../sovereign-sdk/full-node/db/sov-db" }
sov-ethereum = { path = "../sov-ethereum" }
sov-sequencer = { path = "../../sovereign-sdk/full-node/sov-sequencer" }
sequencer-client = { path = "../sequencer-client" }
chainway-sequencer = { path = "../sequencer" }
sov-risc0-adapter = { path = "../../sovereign-sdk/adapters/risc0", features = [
    "native",
] }
sov-state = { path = "../../sovereign-sdk/module-system/sov-state", features = [
    "native",
] }
sov-cli = { path = "../../sovereign-sdk/module-system/sov-cli" }
clap = { workspace = true }
secp256k1 = { workspace = true }

[dev-dependencies]
sov-rng-da-service = { path = "../../sovereign-sdk/utils/rng-da-service" }
sov-rollup-interface = { path = "../../sovereign-sdk/rollup-interface", features = [
    "fuzzing",
] }
sov-prover-storage-manager = { path = "../../sovereign-sdk/full-node/sov-prover-storage-manager", features = [
    "test-utils",
] }
sov-mock-da = { path = "../../sovereign-sdk/adapters/mock-da" }
sov-evm = { path = "../evm", features = ["smart_contracts"] }
sov-bank = { path = "../../sovereign-sdk/module-system/module-implementations/sov-bank", features = [
    "native",
] }
sov-nft-module = { path = "../../sovereign-sdk/module-system/module-implementations/sov-nft-module", features = [
    "native",
] }
sov-zk-cycle-macros = { path = "../../sovereign-sdk/utils/zk-cycle-macros" }
humantime = "2.1"
rs_merkle = { workspace = true }
borsh = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true }

ethereum-types = { workspace = true }
ethers-core = { workspace = true }
ethers-contract = { workspace = true }
ethers-middleware = { workspace = true }
ethers-providers = { workspace = true }
ethers-signers = { workspace = true }
ethers = { workspace = true }
revm = { workspace = true }

reqwest = "0.11"
tendermint = "0.32"
prometheus = "0.11.0"
prettytable-rs = "^0.10"
criterion = "0.5.1"
log = "0.4"
log4rs = "1.0"
regex = "1.10"

[features]
default = [
] # Deviate from convention by making the "native" feature active by default. This aligns with how this package is meant to be used (as a binary first, library second).


bench = [
    "hex",
    "sov-risc0-adapter/bench",
    "sov-zk-cycle-macros/bench",
    "risc0/bench",
]

[[bench]]
name = "rollup_bench"
path = "benches/node/rollup_bench.rs"
harness = false
required-features = ["bench"]

[[bench]]
name = "rollup_coarse_measure"
path = "benches/node/rollup_coarse_measure.rs"
harness = false
required-features = ["bench"]

[[bench]]
name = "prover_bench"
path = "benches/prover/prover_bench.rs"
harness = false
required-features = ["bench"]

[[bin]]
name = "sov-cli"
path = "src/sov-cli/main.rs"


[[bin]]
name = "sov-demo-rollup"
path = "src/main.rs"
