[package]
name = "bitcoin-da"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = { workspace = true }
homepage = { workspace = true }
publish = false
repository = { workspace = true }
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sov-modules-api = { path = "../sovereign-sdk/module-system/sov-modules-api", default-features = false }
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }

tokio = { workspace = true, features = ["full"], optional = true }

reqwest = { workspace = true, optional = true }
base64 = { workspace = true }
hex = { workspace = true, features = ["serde"] }
pin-project = { workspace = true, optional = true, features = [] }
tracing = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
async-trait = { workspace = true }
borsh = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

bitcoin = { workspace = true }
brotli = { workspace = true }
futures.workspace = true


[features]
default = []
native = [
    "dep:tokio",
    "dep:reqwest",
    "dep:pin-project",
    "dep:tracing",
    "sov-rollup-interface/native",
]
