[package]
name = "bitcoin-da"
version = "0.1.0"
authors = { workspace = true }
edition = "2021"
homepage = { workspace = true }
license = "MIT OR Apache-2.0"
publish = false
repository = { workspace = true }
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }

tokio = { workspace = true, features = ["full"], optional = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true, features = ["serde"] }
pin-project = { workspace = true, optional = true, features = [] }
rand = { workspace = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

bitcoin = { workspace = true }
brotli = { workspace = true }
futures.workspace = true

[features]
default = []
native = [
  "dep:tokio",
  "dep:reqwest",
  "dep:pin-project",
  "dep:tracing",
  "sov-rollup-interface/native",
]
