[package]
name = "bitcoin-da"
version = "0.1.0"
authors = { workspace = true }
edition = "2021"
homepage = { workspace = true }
license = "MIT OR Apache-2.0"
publish = false
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
citrea-common = { path = "../common", optional = true }
citrea-primitives = { path = "../primitives", features = ["native"], optional = true }
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }

tokio = { workspace = true, features = ["full"], optional = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
backoff = { workspace = true, optional = true }
borsh = { workspace = true }
hex = { workspace = true, features = ["serde"] }
pin-project = { workspace = true, optional = true, features = [] }
rand = { workspace = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

bitcoin = { workspace = true }
brotli = { workspace = true, optional = true }
futures.workspace = true
sha2 = { workspace = true }

bitcoincore-rpc = { workspace = true, optional = true }

[features]
default = []
native = [
  "dep:backoff",
  "dep:brotli",
  "dep:tokio",
  "dep:pin-project",
  "dep:tracing",
  "sov-rollup-interface/native",
  "dep:citrea-common",
  "dep:citrea-primitives",
  "dep:bitcoincore-rpc",
  "dep:reqwest",
]
