[package]
name = "citrea-stf"
version = { workspace = true }
edition = { workspace = true }
resolver = "2"
authors = { workspace = true }
license = { workspace = true }
homepage = "sovereign.xyz"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
clap = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = [
    "server",
    "http-client",
], optional = true }
# tracing = { workspace = true }


sov-stf-runner = { path = "../sovereign-sdk/full-node/sov-stf-runner" }
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }
sov-cli = { path = "../sovereign-sdk/module-system/sov-cli", optional = true }
sov-sequencer-registry = { path = "../sovereign-sdk/module-system/module-implementations/sov-sequencer-registry" }
sov-blob-storage = { path = "../sovereign-sdk/module-system/module-implementations/sov-blob-storage" }
sov-bank = { path = "../sovereign-sdk/module-system/module-implementations/sov-bank" }
sov-nft-module = { path = "../sovereign-sdk/module-system/module-implementations/sov-nft-module" }
sov-soft-confirmations-kernel = { path = "../sovereign-sdk/module-system/sov-soft-confirmations-kernel" }

sov-mock-da = { path = "../sovereign-sdk/adapters/mock-da" }
sov-chain-state = { path = "../sovereign-sdk/module-system/module-implementations/sov-chain-state" }
sov-modules-stf-blueprint = { path = "../sovereign-sdk/module-system/sov-modules-stf-blueprint" }
sov-value-setter = { path = "../sovereign-sdk/module-system/module-implementations/examples/sov-value-setter" }
sov-accounts = { path = "../sovereign-sdk/module-system/module-implementations/sov-accounts" }
sov-state = { path = "../sovereign-sdk/module-system/sov-state" }
sov-modules-api = { path = "../sovereign-sdk/module-system/sov-modules-api" }
citrea-evm = { path = "../evm" }
soft-confirmation-rule-enforcer = { path = "../soft-confirmation-rule-enforcer", features = [
    "native",
] }


[dev-dependencies]
citrea-stf = { path = ".", features = ["native"] }
tempfile = { workspace = true }
rand = { workspace = true }
sov-data-generators = { path = "../sovereign-sdk/module-system/utils/sov-data-generators" }
sov-mock-zkvm = { path = "../sovereign-sdk/adapters/mock-zkvm" }
sov-prover-storage-manager = { path = "../sovereign-sdk/full-node/sov-prover-storage-manager", features = [
    "test-utils",
] }


[features]
native = [
    "clap",
    "sov-stf-runner/native",
    "dep:sov-cli",
    "sov-accounts/native",
    "sov-modules-api/native",
    "sov-rollup-interface/native",
    "sov-modules-stf-blueprint/native",
    "serde",
    "serde_json",
    "jsonrpsee",
    "toml",
]
serde = [
    "sov-accounts/serde",
    "sov-nft-module/serde",
    "citrea-evm/serde",
    "soft-confirmation-rule-enforcer/serde",
    "dep:serde",
]
default = []
